@@ -1,13 +1,13 @@
 #!/bin/bash
 # script to deploy YATC on Ubuntu 12.04 - 14.04 (netinstall with only ssh server installed)
 # (*w) author: nixargh <nixargh@gmail.com>
-VERSION="0.8.3"
+VERSION="0.8.4"
 ##### Settings ################################################################
 # !!! must be executed from root !!!
 RDPUSER="user"
 TIMEZONE="Europe/Moscow"
-FREERDP_REPO="https://github.com/nixargh/FreeRDP.git"
-FREERDP_BRANCH="master"
+FREERDP_REPO="https://github.com/FreeRDP/FreeRDP.git"
+FREERDP_BRANCH="c9bc88d5f0fed0de03ee697dd382ba8f8a434a82"
 YATC_REPO="https://github.com/nixargh/yatc.git"
 YATC_BRANCH="master"
 ###############################################################################
