@@ -1,3 +1,10 @@
+YATC 0.8.4:
+  yatc.py:
+    1. Print version to  ~/.yatc/version file on startup.
+
+  post-install.sh:
+    1. Changing FreeRDP source version.
+
 YATC 0.8.3:
   yatc.py:
     1. Added dialog to re-ask user about reboot and shutdown.
